plugins/kotlin/idea/tests/testData/multiplatform/duplicateExpectsWithStrongIncompatibility/left/left.kt
expect fun <!LINE_MARKER("descr='Has actuals in bottom module'")!>foo<!>(): Int
